# haze-shimmer-vst

./: .gitignore  Cargo.toml  README.md  hotstart.md  install.sh
.claude/: settings.local.json
.claude/agents/: rust-only.md
src/: lib.rs  params.rs
src/dsp/: allpass.rs  delay_line.rs  early_reflections.rs  envelope.rs  fdn.rs  filters.rs  grain.rs  grain_delay.rs  grain_pool.rs  mod.rs  reverb.rs  ring_buffer.rs  rng.rs
src/editor/: knob.rs  mod.rs
