[package]
name = "shimmer_granular"
version = "0.1.0"
edition = "2024"
authors = ["monoramens <monoramens@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Granular shimmer reverb VST3/CLAP plugin"

[workspace]
members = [".", "xtask"]
[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "shimmer_granular_standalone"
path = "src/bin/standalone.rs"

[features]
default = []

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "1.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.dev]
opt-level = 1
